--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .btn-primary {
+   @apply uppercase bg-orange-500 rounded-md px-5 py-1 text-3xl text-white 
+  }
+
+  .btn-secondary {
+    @apply uppercase bg-blue-600 rounded-md px-5 py-1 text-3xl text-white 
+  }
+}
+
 input {
   @apply border border-gray-300 rounded-md shadow-sm;
 }
