--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@
   }
 }
 
-input {
-  @apply border border-gray-300 rounded-md shadow-sm;
+input[type="text"], input[type="number"] {
+  @apply border border-gray-300 rounded-md shadow-sm px-3 py-1 min-w-[500px] ;
 }
+
+button:disabled {
+  @apply cursor-not-allowed bg-gray-300;
+}
+
