--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
   .btn-tertiary {
     @apply bg-green-600 rounded-md px-5 py-1 text-xl text-white;
   }
+
+  .error-msg {
+    @apply text-red-500 text-sm;
+  }
+
+  .card-prize {
+    @apply bg-gray-100 rounded-md p-5 text-2xl text-gray-800 hover:bg-gray-200 cursor-pointer;
+  }
 }
 
 input[type="text"],
