--- a/src/components/dialog/dialog.css
+++ b/src/components/dialog/dialog.css
@@ -12,7 +12,7 @@ button {
 
 .AlertDialogContent {
   background-color: white;
-  border-radius: 6px;
+  border-radius: 12px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -20,7 +20,7 @@ button {
   width: 90vw;
   max-width: 500px;
   max-height: 85vh;
-  padding: 25px;
+  padding: 28px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 .AlertDialogContent:focus {
@@ -28,15 +28,14 @@ button {
 }
 
 .AlertDialogTitle {
+  text-align: center;
   margin: 0;
-  color: var(--mauve-12);
-  font-size: 17px;
+  font-size: 1.5rem;
   font-weight: 500;
 }
 
 .AlertDialogDescription {
   margin-bottom: 20px;
-  color: var(--mauve-11);
   font-size: 15px;
   line-height: 1.5;
 }
