feat: add hover indicator for buttons

--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,19 @@
 
 @layer components {
   .btn-primary {
-    @apply uppercase bg-orange-500 rounded-md px-5 py-1 text-3xl text-white;
+    @apply uppercase bg-orange-500 rounded-md px-5 py-1 text-3xl text-white hover:bg-orange-400;
   }
 
   .btn-secondary {
-    @apply uppercase bg-blue-600 rounded-md px-5 py-1 text-3xl text-white;
+    @apply uppercase bg-blue-600 rounded-md px-5 py-1 text-3xl text-white hover:bg-blue-400;
   }
 
   .btn-tertiary {
-    @apply bg-green-600 rounded-md px-5 py-1 text-white;
+    @apply bg-green-600 rounded-md px-5 py-1 text-white hover:bg-green-400;
   }
 
   .btn-gray {
-    @apply bg-gray-500 rounded-md px-5 py-1 text-white;
+    @apply bg-gray-500 rounded-md px-5 py-1 text-white hover:bg-gray-400;
   }
 
   .error-msg {
