--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,10 @@ input[type="number"] {
   @apply border border-gray-300 rounded-md shadow-sm px-3 py-1 min-w-[500px];
 }
 
+select {
+  @apply border border-gray-300 rounded-md shadow-sm px-3 py-1 min-w-[500px];
+}
+
 button:disabled {
   @apply cursor-not-allowed bg-gray-300 hover:bg-gray-300;
 }
