--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,7 @@ select {
 button:disabled {
   @apply cursor-not-allowed bg-gray-300 hover:bg-gray-300;
 }
+
+.text-shadow {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+}
