--- a/src/components/winner-text/winner-text.css
+++ b/src/components/winner-text/winner-text.css
@@ -1,4 +1,4 @@
-h1[data-heading] {
+.winner {
   background: linear-gradient(
     to bottom,
     #cfc09f 22%,
@@ -17,7 +17,7 @@ h1[data-heading] {
   margin: 0;
 }
 
-h1[data-heading]:after {
+.winner:after {
   background: none;
   content: attr(data-heading);
   left: 0;
@@ -25,6 +25,6 @@ h1[data-heading]:after {
   z-index: -1;
   position: absolute;
   text-shadow:
-    2px 2px 6px rgba(0, 0, 0, 0.4),
-    -2px -2px 6px rgba(0, 0, 0, 0.4);
+    2px 2px 2px rgba(0, 0, 0, 0.4),
+    -2px -2px 2px rgba(0, 0, 0, 0.4);
 }
