--- a/src/components/winner-text/winner-text.css
+++ b/src/components/winner-text/winner-text.css
@@ -15,6 +15,7 @@
   position: relative;
   text-transform: uppercase;
   margin: 0;
+  font-weight: bold;
 }
 
 .winner:after {
@@ -26,5 +27,5 @@
   position: absolute;
   text-shadow:
     2px 2px 2px rgba(0, 0, 0, 0.4),
-    -2px -2px 2px rgba(0, 0, 0, 0.4);
+    3px 3px 2px rgba(0, 0, 0, 0.4);
 }
